--- a/user/css/sidebar.css
+++ b/user/css/sidebar.css
@@ -51,8 +51,6 @@
 
 @media (max-width: 992px) {
     .sidebar {
-        height: auto;
-        position: static;
-        margin-bottom: 1.5rem;
+        display: none;
     }
 }
